tests/invalid/tuple_comparison_ordering/main.py
a: tuple[int, int] = (1, 2)
b: tuple[int, int] = (3, 4)
c: bool = a < b
